--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -5,15 +5,15 @@
     <title>Title</title>
 </head>
 <body>
-<h1 th:text="${account.username}'\'s + 'Profile'"></h1>
-<ul th:each="post : account.userPosts">
+<h1 th:text="${username} + 'Profile'"></h1>
+<ul th:each="post : ${posts}">
     <li th:text="${post.content}"></li>
 </ul>
 <form action="/create-post" method="post">
     <fieldset>
         <legend>Create New Post</legend>
         <input type="textarea" name="content">
-        <input type="hidden" name="username" th:value="${account.username}">
+        <input type="hidden" name="username" th:value="${username}">
         <input type="submit" value="Add">
     </fieldset>
 </form>
